--- a/templates/mood_playlist.html
+++ b/templates/mood_playlist.html
@@ -11,22 +11,22 @@
         <div class="parent-page">
             <h2>Playlists Accordinng To Your Mood</h2>
             <div class="create-area">
-                <a href="{{ playlists[0]['url'] }}" class="mood happy">
+                <a href="{{ playlists[0]['url'] }}" target="_blank" class="mood happy">
                     <p>Happy</p>
                 </a>
-                <a href="{{ playlists[1]['url'] }}" class="mood angry">
+                <a href="{{ playlists[1]['url'] }}" target="_blank" class="mood angry">
                     <p>Angry</p>
                 </a>
-                <a href="{{ playlists[2]['url'] }}" class="mood energy">
+                <a href="{{ playlists[2]['url'] }}" target="_blank" class="mood energy">
                     <p>Energetic</p>
                 </a>
-                <a href="{{ playlists[3]['url'] }}" class="mood sad">
+                <a href="{{ playlists[3]['url'] }}" target="_blank" class="mood sad">
                     <p>Sad</p>
                 </a>
-                <a href="{{ playlists[4]['url'] }}" class="mood fear">
+                <a href="{{ playlists[4]['url'] }}" target="_blank" class="mood fear">
                     <p>Fear</p>
                 </a>
-                <a href="{{ playlists[5]['url'] }}" class="mood fear">
+                <a href="{{ playlists[5]['url'] }}" target="_blank" class="mood fear">
                     <p>Neutral</p>
                 </a>
             </div>
