fix login and pic issue

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -44,7 +44,7 @@
         </div>
         <div class="right-side">
             <div class="card">
-                <img src="/static/img/mainpic.png" alt="mainpic">
+                <img src="https://github.com/pritam20ps05/Groovy.ai/assets/49360491/822f48b7-2699-4db1-8753-58046e75e36e" alt="mainpic">
             </div>
         </div>
     </div>
