--- a/static/css/take_photo.css
+++ b/static/css/take_photo.css
@@ -44,8 +44,8 @@ body {
 }
 
 .parent-page .camera-area {
-    width: 800px;
-    height: 400px;
+    /* width: 800px;
+    height: 400px; */
     border: 2px solid white;
 }
 
@@ -96,8 +96,8 @@ body {
 }
 
 .res-page #results {
-    width: 809px;
-    height: 410px;
+    /* width: 809px;
+    height: 410px; */
     border: 5px solid white;
 }
 
@@ -109,4 +109,8 @@ body {
     border-radius: 1.75rem;
     border: none;
     cursor: pointer;
+}
+
+canvas {
+    position: absolute;
 }
