--- a/static/css/home.css
+++ b/static/css/home.css
@@ -166,6 +166,7 @@ body {
     font-size: 1rem;
     transition: all 0.2s ease;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .btn-grp #getst:hover {
