--- a/static/css/take_photo.css
+++ b/static/css/take_photo.css
@@ -8,15 +8,18 @@
     color: #fff;
 }
 
+.d-none {
+    display: none !important;
+}
+
 body {
     width: 100%;
-    height: 100vh;
+    background: #151521;
 }
 
 .parent-page {
     width: 100%;
     height: 100vh;
-    background: #151521;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,57 +63,99 @@ body {
     text-decoration: none;
 }
 
-.res-page {
-    width: 100%;
-    height: 100vh;
-    background: #151521;
+canvas {
+    position: absolute;
+}
+
+.mood-page {
     display: flex;
-    align-items: center;
     justify-content: center;
-    gap: 1rem;
+    align-items: center;
+    padding-right: 5rem;
+    margin-bottom: 3rem;
+}
+
+.mood-valdn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 5rem;
+    margin-bottom: 3rem;
+}
+
+.mood-page .mood-ques, .mood-valdn .mood-ques {
+    font-size: 7rem;
+    font-weight: 500;
+    width: 60%;
+    transform: translateX(-60px);
+}
+
+.mood-page .mood-opt , .mood-valdn .mood-opt{
+    display: flex;
     flex-direction: column;
-}
-
-.res-page .success {
-    display: flex;
-    gap: 0.75rem;
     align-items: center;
     justify-content: center;
+    gap: 2.8rem;
 }
 
-.res-page .success .logo {
-    padding: 0.7rem 0.8rem;
-    border-radius: 50%;
-    background: rgb(5, 199, 70);
-    display: grid;
-    place-content: center;
+.mood-opt .opt {
+    text-decoration: none;
+    width: 80%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2rem;
+    cursor: pointer;
+    transition: all 0.2s ease;
 }
 
-.success .logo i {
+.mood-opt .opt:hover {
+    transform: scale(1.1);
+}
+
+.mood-opt .opt i {
+    font-size: 4rem;
+    transition: all 0.2s ease;
+}
+
+.mood-opt .opt p {
     font-size: 1.4rem;
 }
 
-.success p {
-    font-weight: 500;
-    font-size: 1.2rem;
+.opt i {
+    pointer-events: none;
 }
 
-.res-page #results {
-    /* width: 809px;
-    height: 410px; */
-    border: 5px solid white;
+#opt-1:hover i{
+    color: rgb(255, 213, 0);
 }
 
-.res-page #satis{
-    padding: 0.875rem 1.6rem;
-    font-size: 1.1rem;
-    background: #FF516D;
-    font-weight: 500;
-    border-radius: 1.75rem;
-    border: none;
-    cursor: pointer;
+#opt-2:hover i{
+    color: rgb(255, 81, 0);
 }
 
-canvas {
-    position: absolute;
+#opt-3:hover i{
+    color: rgb(47, 229, 83);
+}
+
+#opt-4:hover i{
+    color: rgb(51, 146, 255);
+}
+
+#opt-5:hover i{
+    color: rgb(111, 111, 111);
+}
+
+#opt-6:hover i{
+    color: rgb(111, 89, 253);
+}
+
+.selected {
+    transform: scale(1.1);
+}
+
+.mood-ques span {
+    font-size: 9rem;
+    font-weight: bold;
+    color: #FF516D;
 }
