--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,7 +38,7 @@
                 <p>Elevate your music level by listening to AI recommended songs according to your mood by <span>realtime facial recognition</span> and <span>personalized songs</span> recommendation model.</p>
             </div>
             <div class="btn-grp">
-                <button id="getst">Get Started</button>
+                <a href="/setmoodplaylist" id="getst">Get Started</a>
                 <button id="docs">View Docs <i class='bx bx-arrow-back' style="transform: rotate(180deg);"></i></button>
             </div>
         </div>
